--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "airbnb", "plugin:prettier/recommended"], // we must leave the "prettier" as the last element of the array, because the previous elements will lead to modulate their definitions according to the next element.
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "rules": {
+    "max-len": ["error", 140],
+    "quotes": [2, "single", { "avoidEscape": true }]
+  }
 }
