--- a/package.json
+++ b/package.json
@@ -19,19 +19,13 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "eslint": "^8.41.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.4",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "typescript": "5.0.4"
-  },
-  "lint-staged": {
-    "*.(ts|tsx)": [
-      "eslint . --fix",
-      "prettier --write"
-    ]
   }
 }
