--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.4",
@@ -26,7 +27,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
 }
